# uqoin-node

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: publish.yml
src/: appdata.rs  config.rs  error.rs  main.rs  utils.rs
src/scopes/: blockchain.rs  client.rs  coin.rs  mod.rs  node.rs  validator.rs
src/tasks/: mine.rs  mod.rs  sync.rs  validate.rs
