[package]
name = "uqoin-node"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
env_logger = "0.11.7"
finitelib = { version = "0.1.12", features = ["serde"] }
lbasedb = "0.1.6"
log = "0.4.26"
rand = "0.9.0"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_qs = "0.14.0"
tokio = { version = "1.44.1", features = ["full"] }
uqoin-core = { git = "https://github.com/fomalhaut88/uqoin-core.git", features = ["blockchain"] }
# uqoin-core = { path = "../uqoin-core", features = ["blockchain"] }
